# Atscure_Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dlls_info.txt
api/: buffer.cpp  cmd.cpp  cmd.hpp  context.cpp  graphics.hpp  swapchain.cpp
as/: key_bits.hpp  utils.hpp  wrapper.hpp
exe/: dlls_info.txt
exts/: CMakeLists.txt  default_renderer.cpp  mesh.cpp  scene.cpp
include/: as_buffer.hpp  as_camera.hpp  as_cmd.hpp  as_device.hpp  as_image.hpp  as_log.hpp  as_multithread.hpp  as_pipeline.hpp  as_shader.hpp  as_swapchain.hpp  as_window.hpp  at_buffer.hpp  at_camera.hpp  at_cmd.hpp  at_device.hpp  at_image.hpp  at_log.hpp  at_mesh.hpp  at_multithread.hpp  at_pipeline.hpp  at_renderpass.hpp  at_shader.hpp  at_swapchain.hpp  at_window.hpp  defines.hpp  game.hpp  mesh.hpp  module.hpp  physic.hpp  render.hpp
include/api/: api_wrapper.hpp  buffer.hpp  cmd.hpp  context.hpp  descriptor.hpp  device.hpp  image.hpp  logging.hpp  pipeline.hpp  render_pass.hpp  swapchain.hpp  syncs.hpp
include/as/: as_wrapper.hpp  mesh.hpp  scene.hpp  script.hpp  texture.hpp  transform.hpp  utils.hpp  wrapper.hpp
include/engine/: engine.hpp  engine_wrapper.hpp  mesh.hpp  renderer.hpp  scene.hpp  script_process.hpp  texture.hpp  transform.hpp
include/exts/: default_renderer.hpp  exts.hpp  mesh.hpp  scene.hpp
include/module/: base.hpp  game.hpp  module.hpp  module_wrapper.hpp  physic.hpp  physic_ode.hpp  render.hpp  renderer.hpp
include/platform/: loader.hpp  module.hpp  platform_wrapper.hpp  script.hpp  script_defines.hpp  wrapper.hpp
include/vk_api/: buffer.hpp  cmd.hpp  descriptor.hpp  device.hpp  graphics.hpp  image.hpp  logging.hpp  swapchain.hpp  syncs.hpp  wrapper.hpp
include_app/: as_light.hpp  as_mesh.hpp  as_texture.hpp  as_transform.hpp  at_light.hpp  at_material.hpp  at_mesh.hpp  at_model.hpp  at_texture.hpp  at_transform.hpp
module/: CMakeLists.txt  base.cpp  game.cpp  module.cpp  ode.cpp  ode.hpp  physic.cpp  physic_ode.cpp  render.cpp  renderer.cpp
render/: CMakeLists.txt  context.cpp  context.hpp  deffered.cpp  deffered.hpp  glms.hpp  mateiral.cpp  material.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  program.cpp  program.hpp  render.cpp  render.hpp  texture.cpp  texture.hpp
render/api/: buffer.cpp  buffer.hpp  cmd.cpp  cmd.hpp  context.cpp  context.hpp  descriptor.cpp  descriptor.hpp  device.cpp  device.hpp  graphics.cpp  graphics.hpp  image.cpp  image.hpp  logging.cpp  swapchain.cpp  syncs.cpp  utils.hpp
render/programs/: all.hpp  deffered_zero.cpp  deffered_zero.hpp  programs.cpp  programs.hpp
res/shader/: frag0.spv  frag1.spv  frag2.spv  vulkan0.frag  vulkan1.frag  vulkan2.frag
script/: CMakeLists.txt  camera_control.hpp  test.cpp  test2.cpp
script/engine/: CMakeLists.txt  engine.cpp  mesh.cpp  renderer.cpp  script_process.cpp  texture.cpp  transform.cpp
script/game/: CMakeLists.txt  camera_move.cpp  game_main.cpp  sponza_scale.cpp
src/: as_buffer.cpp  as_camera.cpp  as_cmd.cpp  as_device.cpp  as_image.cpp  as_log.cpp  as_multithread.cpp  as_pipeline.cpp  as_shader.cpp  as_swapchain.cpp  as_window.cpp  at_buffer.cpp  at_camera.cpp  at_cmd.cpp  at_device.cpp  at_image.cpp  at_log.cpp  at_mesh.cpp  at_multithread.cpp  at_pipeline.cpp  at_renderpass.cpp  at_shader.cpp  at_swapchain.cpp  at_window.cpp  game.cpp  main.cpp  module.cpp  physic.cpp  render.cpp
src/api/: buffer.cpp  cmd.cpp  context.cpp  descriptor.cpp  device.cpp  graphics.cpp  image.cpp  logging.cpp  pipeline.cpp  render_pass.cpp  swapchain.cpp  syncs.cpp
src/as/: mesh.cpp  scene.cpp  script.cpp  texture.cpp  transform.cpp
src/platform/: loader.cpp  script.cpp
src_app/: as_light.cpp  as_mesh.cpp  as_texture.cpp  as_transform.cpp  at_light.cpp  at_material.cpp  at_mesh.cpp  at_model.cpp  at_texture.cpp  at_transform.cpp  main.cpp
src_test/: test.cpp
utils/: CMakeLists.txt  logging.cpp  logging.hpp  tools.cpp  tools.hpp
vk_api/: CMakeLists.txt
